--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ psutil
 speedtest-cli
 https://github.com/1Danish-00/Telethon/archive/master.zip
 html_telegraph_poster
+# (existing entries remain)
+# Add this line:
+lxml_html_clean
